[package]
name = "wiiu_swizzle-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
arbitrary = { version = "1", features = ["derive"] }
rand = "0.8.4"

[dependencies.wiiu_swizzle]
path = ".."
features = ["arbitrary"]

[[bin]]
name = "swizzle_deswizzle"
path = "fuzz_targets/swizzle_deswizzle.rs"
test = false
doc = false
bench = false

[[bin]]
name = "deswizzle_surface"
path = "fuzz_targets/deswizzle_surface.rs"
test = false
doc = false
bench = false
